installable ok - need to change icons

--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,14 @@
     "name": "X to vxtwitter",
     "icons": [
       {
-        "src": "img/x-50.png",
+        "src": "img/icon-192.png",
         "type": "image/png",
         "sizes": "192x192"
+      },
+      {
+        "src": "img/icon-512.png",
+        "type": "image/png",
+        "sizes": "512x512"
       }
     ],
     "start_url": "/?source=pwa",
